--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <script src="/lesson1.js" type="module"></script>
     <script src="/lesson2.js" type="module"></script>
+    <script src="/lesson3.js" type="module"></script>
 </body>
 </html>
