--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <script src="/lesson1.js" type="module"></script>
     <script src="/lesson2.js" type="module"></script>
     <script src="/lesson3.js" type="module"></script>
+    <script src="/lesson5.js" type="module"></script>
 </body>
 </html>
